# tcllcms

./: BUGFIXES.txt  Makefile.in  README.md  configure  configure.in
generic/: tcllcms.c  tcllcms.h  tcllcms_conversion.c  tcllcms_gamma.c  tcllcms_info.c  tcllcms_misc.c  tcllcms_profile.c  tcllcms_trans.c
tclconfig/: tcl.m4
win/: resource.h  tcllcms.aps  tcllcms.dsp  tcllcms.dsw  tcllcms.ncb  tcllcms.opt  tcllcms.plg  tcllcms.rc
